[package]
name = "secretfop"
version = "0.1.0"
edition = "2021"
publish = false

[profile.release]
lto = true
strip = true

[dependencies]
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
serde_yaml = "0.9"
clap = { version = "4.1", features = [ "derive" ] }
reqwest = { version = "0.11" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3"

